hologram lang // config cleanup